# Utilities

./: CMakeLists.txt  LICENSE  README.md
DL/: CMakeLists.txt  Library.cpp  Library.hpp  PCH.hpp
DL/Windows/: CMakeLists.txt  Library.cpp  Library.hpp  PCH.hpp
basic/: Align.hpp  Assert.hpp  BreakToDebug.hpp  CMakeLists.txt  CallConvention.hpp  Dll.hpp  ErrorCodes.hpp  Log.hpp
common/: Align.hpp  Assert.hpp  BreakToDebug.hpp  CMakeLists.txt  Log.hpp  PCH.cpp  PCH.hpp
containers/: CMakeLists.txt  IntrusiveList.hpp  PCH.hpp  PointerContainer.hpp  ReferenceCounted.cpp  ReferenceCounted.hpp  SharedResource.hpp  Singleton.hpp  test.cpp
helpers/: Bits.hpp  CMakeLists.txt  Hash_string.cpp  Hash_string.hpp  Name.cpp  Name.hpp  PCH.hpp  Type.hpp
math/: Build_test.cpp  CMakeLists.txt  Float12.hpp  Float16.hpp  Float4.hpp  FloatTypes.hpp  Matrix.cpp  Matrix.hpp  PCH.cpp  PCH.hpp  Quaternion.hpp  Vector.hpp
memory/: Binary_data.cpp  Binary_data.hpp  CMakeLists.txt  MemoryAccess.cpp  MemoryAccess.hpp  PCH.hpp
task/: ApplyTupple.hpp  CMakeLists.txt  IsMethod.hpp  Task.hpp
text/: CMakeLists.txt  Font.cpp  Font.hpp  Glyph.cpp  Glyph.hpp  Layout.cpp  Layout.hpp  Map.cpp  Map.hpp  PCH.hpp  test.cpp
